--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
   },
   "keywords": [],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "axios": "^1.6.8",
+    "openai": "^4.29.2",
+    "puppeteer": "^22.6.0"
+  }
 }
